# musicplayer-rs

./: .rustfmt.toml  Cargo.toml  flake.nix
src/: lib.rs  main.rs
src/adapters/: library.rs  mod.rs
src/adapters/audio/: mod.rs  rodio.rs
src/adapters/db/: sqlite.rs
src/adapters/metadata/: lofty.rs  mod.rs
src/application/: folders.rs  mod.rs  player.rs  scanner.rs  tracks.rs
src/application/ports/: audio.rs  library.rs  mod.rs  scanner.rs
src/domain/: library.rs  mod.rs  player.rs  track.rs
src/player/: mod.rs  queue.rs  rodio.rs
src/ui/: album_grid.rs  app.rs  column_picker.rs  context_menu.rs  edit_dialog.rs  folder_list.rs  format.rs  library_view.rs  main_window.rs  mod.rs  player_bar.rs  queue_view.rs  sidebar.rs  style.css  style.rs  view_mode.rs
src/ui/main_window/: editing.rs  header.rs  mod.rs  sidebars.rs
src/ui/widgets/: buttons.rs  callback.rs  containers.rs  icons.rs  labels.rs  mod.rs  nav_tree.rs  panel.rs  rows.rs  section.rs  value_list.rs
tests/: scan_integration.rs
