[package]
name    = "musicplayer-rs"
version = "0.1.0"
edition = "2024"

[features]
# Enable UI and audio — requires system GTK4 + ALSA (only available inside nix develop)
ui = ["dep:gtk4", "dep:glib", "dep:rodio"]

[dependencies]
# Pure Rust — compile and test anywhere
lofty      = "0.24.0"
symphonia  = { version = "0.5", features = ["all"] }
rusqlite   = { version = "0.40.1", features = ["bundled"] }
thiserror  = "2.0.18"
tracing    = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Requires system libraries (GTK4, ALSA) — gated behind the `ui` feature
gtk4  = { version = "0.11.4", features = ["v4_14"], optional = true }
glib  = { version = "0.22.8", optional = true }
rodio = { version = "0.22.2", features = ["symphonia-all", "symphonia-simd"], optional = true }
